--- a/templates/front/register.html
+++ b/templates/front/register.html
@@ -10,7 +10,7 @@ test web system
 
 {% block body %}
 <h1 class="page-title">注册</h1>
-<div elass="sign-box">
+<div class="sign-box">
     <form action="" id="register-form">
         <div class="form-group">
             <div class="input-group">
