--- a/templates/front/base.html
+++ b/templates/front/base.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">知了 Python 论坛</a>
+            <a class="navbar-brand" href="#">测试系统平台</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria- label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -22,7 +22,7 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="/">首页 <span class="sr-only">(current) </span></a>
                 </li>
-                </ul>！
+                </ul>
                 <form class="form-inline my-lq-0">
                     <input class="form-control mr-sm-2" type="search" placeholder="请输入关键字" aria-label="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">搜索</button>
